syntax = "proto3";
package chorus;
option go_package = ".;chorus";

import "google/protobuf/timestamp.proto";

message User {
    uint64 id = 1;

    string firstName = 2;
    string lastName = 3;
    string username = 4;
    string email = 5;
    string password = 6;
    string status = 7;

    repeated string roles = 8;

    bool totpEnabled = 9;

    google.protobuf.Timestamp createdAt = 10;
    google.protobuf.Timestamp updatedAt = 11;

    bool passwordChanged = 12;
}
